Fix Darin's post-landing review comments for 262712@main https://bugs.webkit.org/show_bug.cgi?id=255522

Unreviewed, fix Darin's post-landing review comments for 262712@main.

* Source/JavaScriptCore/runtime/JSString.h:
(JSC::jsString):
(JSC::jsSubstringOfResolved):
(JSC::jsSubstring):
(JSC::jsOwnedString):
(JSC::jsStringWithCache):

Canonical link: https://commits.webkit.org/263024@main